26 de septiembre 10:30am

--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -20,37 +20,51 @@
 
     La tercera de estas muestras, la Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad de Santiago de Cuba, contiene piezas de interés histórico y cultural. A diferencia de las muestras anteriores ésta posee características de museo y se encuentra emplazada en un lugar con acceso al público. Allí se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones, objetos personales entre otras; estas fueron donadas por el propio Prat a la Casa de Altos Estudios oriental las cuales actualmente se encuentran en un estado de deterioro por falta de las condiciones que requiere el local para su conservación.
 
-    La temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros, son factores que inciden directamente en el deterioro gradual de las obras que allí se encuentran. Con la aplicación del Internet de las Cosas en esta sala expositiva es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.\\
+    La temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros, son factores que inciden directamente en el deterioro gradual de las obras que allí se encuentran. Con la aplicación del Internet de las Cosas en esta sala expositiva es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.
+    
+    El análisis de la situación descrita permite identificar como \textbf{problema de la investigación} la inexistencia de un sistema de monitoreo de bajo consumo para el control en tiempo real del estado de conservación de las piezas pertenecientes a la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro y como
+    \textbf{objeto de la investigación} los sistemas de supervisión y monitoreo basado en IoT para la conservación de las piezas en la Colección de Arte y Arqueología “Francisco Prat Puig” teniendo en cuenta como \textbf{objetivo} diseñar e implementar de un sistema de arquitectura descentralizada basado en IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la muestra “Prat Puig”. Como \textbf{campo de acción} los sistemas de supervisión y monitoreo basados en IoT para la conservación de las piezas en los museos.
 
-    En base a lo anterior descrito se asume como \textbf{problema de la investigación} la inexistencia de un sistema de monitoreo de bajo consumo para el control en tiempo real del estado de conservación de las piezas pertenecientes a la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro.
-
-    \textbf{Objeto de la investigación: }sistemas de supervisión y monitoreo basado en IoT para la conservación de las piezas en la Colección de Arte y Arqueología “Francisco Prat Puig”.
-
-    \textbf{Campo de acción: }sistemas de supervisión y monitoreo basados en IoT para la conservación de las piezas en los museos.
-
-    \textbf{Objetivo: }diseñar e implementar de un sistema de arquitectura descentralizada basado en IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la muestra “Prat Puig”.
-
+    Se plantea como \textbf{hipótesis} (Después de terminar el informe)%que si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en un museo, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración en dicho local correspondiente a la muestra Prat Puig, estaríamos extendiendo la presencia de estas piezas y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
+    
     \newpage
     
-    \textbf{Tareas de la investigación:}
+    Para el cumplimento de los objetivos propuestos se realizarán las siguientes \textbf{tareas de investigación:}
+
     \begin{enumerate} %Para crear la lista
         \item Analizar la trascendencia del Internet de las Cosas en los museos internacionales y en los museos de Cuba.
         \item Analizar las arquitecturas de los sistemas IoT.
         \item Proponer una arquitectura IoT para el sistema.
         \item Caracterizar los diferentes sensores y microcontrolador a emplear acorde a las variables presentes.
-        \item Implementación de un sistema de supervisión y monitoreo basado en IoT.
+        \item Desarrolar el firmware de la aplicación.
+        \item Implementación del sistema de supervisión y monitoreo basado en IoT.
     \end{enumerate}
 
-    
+    Estas tareas se desarrollan teniendo como base los siguientes \textbf{métodos y técnicas:}
 
-    \textbf{Aporte de la investigación: } un sistema de supervisión y monitoreo basado en IoT para el control del estado de conservación de los objetos de la muestra.
+    \begin{enumerate}
+        \item Análisis de documentos. Para realizar la consulta de bibliografía de diferentes autores que trabajan la temática de la aplicación del IoT en los museos.
+        \item Método histórico-lógico. Para realizar un análisis histórico sobre la evolución y los avances del IoT.
+        \item Método de análisis-síntesis. Para analizar las diferentes fuentes sobre museos inteligentes con base en el Internet de las Cosas y sintetizar las vías más exentas a utilizar para cumplir los objetivos propuestos.
+        \item Técnicas empíricas. Montaje de pruebas de concepto para la obtención de variables medioambientales en la muestra tales como:
+            \begin{itemize}
+                \item Temperatura
+                \item Humedad relativa
+                \item CO2
+                \item Vibraciones
+                \item Intensidad luminosa
+                \item Polución
+            \end{itemize}
+            Empleando una técnica de muestreo no probabilístico en el que los estudios arrojan resultados concretos vasados en las experiencias.
+    \end{enumerate}
 
-    \textbf{Organización del documento: }El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.
+    El \textbf{aporte de esta investigación} consiste en el montaje de un sistema de supervisión y monitoreo empleando tecnologías basadas en el Internet de las Cosas en museos. Esta propuesta sirve como base documental actualizada y novedosa permitiendo su implementación en cualquier instalación con características similares, en especial en los museos de la ciudad de Santiago de Cuba.
 
-    En el Capítulo I se hace un análisis de la trascendencia del IoT en los museos internacionales y en los museos de nuestro País.
-    Se realiza, además, un análisis de las arquitecturas propuestas por otros autores y se propone una para el desarrollo del proyecto, haciendo una caracterización de la misma, desglosándolas por partes.
-    También se trata lo relacionado a los sistemas de control de población.
+    \textbf{Extructura del trabajo}
 
-    En el Capítulo II como parte de la implementación del proyecto se hacen análisis de los esquemáticos correspondientes al montaje de los nodos...
+    El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.
 
+    En el capítulo 1 se abordan los antecedentes de la aplicación del Internet de las Cosas en los museos a nivel internacional así como la situación del IoT en los museos de nuestro País, analisis de las arquitecturas de IoT y sus principales capas, la proposición de una para el proyecto y la caracterización de sus capas, así como las condiciones medioambientales factibles para la aparición de insectos y su prevención.
+
+    En el capítulo 2 se trata lo relacionado al diseño y la implementación del Sistema de Supervisión y Monitoreo de las piezas de arte en el museo de la muestra pertenecientes a la Colección de Arte y Arqueología Francisco Prat Puig, se analiza la selección de la instrumentación en base al ahorro de energía y de recursos, creando las condiciones mínimas indispensables para el montaje del proyecto de automatización ajustado a las características de instalación seleccionadas.
     
